--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,15 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-mlkit-language-id:17.0.0-beta1'
     def camerax_version = "1.1.0-beta01"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+
+    // ML Kit tools
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
+    implementation 'com.google.mlkit:language-id:17.0.3'
 
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
